# public-ads-scraping

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOCAL_BOOTSTRAP.md  ORCHESTRATOR_STATE.json  README.md  SECURITY.md  SPEC.md  STATE.json  TASKS.md  package-lock.json  package.json
platform/: .gitignore  LOCAL_VALIDATION.md  MANUAL_TESTING.md  README.md  docker-compose.yml  env.example  firebase.json  firestore.rules  main.py  pyproject.toml  requirements.txt
platform/agent/: __init__.py  agent_brain.py  api.py  config.py  data_service.py  job_queue.py  orchestrator.py  requirements.txt
platform/agent/adapters/: __init__.py
platform/agent/adapters/cloud/: cloud_monitoring.py  firestore_storage.py  pubsub_queue.py
platform/agent/interfaces/: __init__.py  queue.py  storage.py
platform/agent/services/: __init__.py  screenshot_saver.py  stream_manager.py
platform/ci/: bitbucket-pipelines.yml
platform/dashboard/: README.md  bitbucket-pipelines.yml  docker-compose.prod.yml  docker-compose.yml  env.example
platform/dashboard/backend/: Dockerfile  env.example  requirements.txt
platform/dashboard/backend/app/: main.py  (+3 more)
platform/dashboard/frontend/: DASHBOARD_GUIDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
platform/dashboard/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
platform/data/: .gitignore  README.md
platform/data/db/: jobs.json
platform/data/metrics/: scraper_status.json  system_metrics.json  time_series.json
platform/docker/: Dockerfile.agent  Dockerfile.scraper  nginx.conf
platform/docs/: architecture.md  data_flow.md  local_vs_cloud.md
platform/feature_extraction/: __init__.py  extract_features.py  requirements.txt
platform/firestore/: firestore_client.py
platform/reverse_prompt/: __init__.py  generate_prompt.py  requirements.txt  rules_engine.py
platform/reverse_prompt/templates/: industry_templates.json
platform/scrapers/: package-lock.json  package.json  scraper.js  server.js  streaming.js  utils.js
platform/scripts/: setup.sh  start-local.sh  validate.py
platform/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
platform/tests/: test_feature_extraction.py
platform/tests/e2e/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  run_e2e_tests.sh
(+186 files in other folders)
