[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ads-platform"
version = "1.0.0"
description = "Local-first, cloud-optional toolkit for agentic ads scraping and reverse prompting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Project contributors"}
]
keywords = ["ads", "scraping", "ai", "vertex-ai", "gcp", "creative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-storage>=2.13.0",
    "google-cloud-aiplatform>=1.36.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "Pillow>=10.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]
ml = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
agentic-ads = "main:main"

[tool.setuptools.packages.find]
include = ["agent*", "feature_extraction*", "reverse_prompt*", "firestore*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "node_modules"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests", "scrapers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=agent --cov=feature_extraction --cov=reverse_prompt --cov-report=term-missing"
